<resources>
    <string name="app_name" translatable="false">Qasemti</string>
    <string name="copyrights" translatable="false">Copyright © 2021 Qasemti All rights</string>
    <string name="hello">Hello 111</string>
    <string name="hello2">Hello 222</string>
    <string name="hello3">Hello 3333</string>
    <string name="lang_ar">ARABIC</string>
    <string name="lang_eng">ENGLISH</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="mobile">Mobile</string>
    <string name="login">LOGIN</string>
    <string name="products">Products</string>
    <string name="Orders">Orders</string>
    <string name="enterNumber">Please enter phone number</string>
    <string name="Home">Home</string>
    <string name="Notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="Account">Account</string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="FName">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="LName">Last Name</string>
    <string name="email">Email</string>
    <string name="civil_id_nb">Civil ID #</string>
    <string name="male">Male</string>
    <string name="register">REGISTER</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="alternate_contact_number">Alternate Contact Number</string>
    <string name="please_fill_the_below_fields_to_register">Please fill the below fields to register</string>
    <string name="available">Available</string>
    <string name="ClientsRating">Client\'s Rating</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="active_n_order">Active \nOrders</string>
    <string name="upcoming_orders">Upcoming \nOrders</string>
    <string name="dumy_text_underline">Beirut, Bir hassan, J Bld 5th floor.Block B</string>
    <string name="verification">Verification</string>
    <string name="enter_the_6_digit_code_sent_to_you_from_qasemati">Enter the 4 digit code sent to you from Qasemti</string>
    <string name="enter_4_digit">Enter the 4 digit code sent to you from Qasemti</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="resend_code">Resend the code</string>
    <string name="verify">VERIFY</string>
    <string name="account_status">Account Status</string>
    <string name="account_pending">Your account is pending approval</string>
    <string name="updated_status">We will let you know by the updated status.\n How would you like to get notified?</string>
    <string name="sms">SMS</string>
    <string name="find_your_updates">You can always find your updates in your email</string>
    <string name="save">Save</string>
    <string name="fill_all_field">Please fill all Field</string>
    <string name="ok">ok</string>
    <string name="email_valid_error">Please enter a valid email</string>
    <string name="select_get_notified">Please select how to get notified</string>
    <string name="new_member_register">New Member? Register</string>
    <string name="cancel">Cancel</string>
    <string name="ads_place">Ads Place</string>
    <string name="our_services">Our Services</string>
    <string name="Profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="purchase">Purchase</string>
    <string name="rental">Rental</string>
    <string name="service">Service</string>
    <string name="type">Type</string>
    <string name="service_capacity">Service / Capacity</string>
    <string name="apply_filters">APPLY FILTERS</string>
    <string name="reset">RESET</string>
    <string name="order_date">Order Date</string>
    <string name="expected_delivery">Expected delivery</string>
    <string name="view_order_details">View Order Details</string>
    <string name="accept">ACCEPT</string>
    <string name="water_tank">Water Tank</string>
    <string name="address">Address</string>
    <string name="bank_account_information">Bank Account Information</string>
    <string name="AccNumber">Account Number</string>
    <string name="BankName">Bank Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="iban">IBAN</string>
    <string name="Active">Active</string>
    <string name="upcoming">Future</string>
    <string name="Completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="rate">Rate</string>
    <string name="OrderAmount">Order Amount</string>
    <string name="cancellation_reason">Cancellation reason:</string>
    <string name="CanceledBy">Cancelled By:</string>
    <string name="description">Description</string>
    <string name="view_address">View Address</string>
    <string name="OnTrack">On Track?</string>
    <string name="Delivery">Delivered ?</string>
    <string name="Paid">Paid ?</string>
    <string name="search_by">Search by client name, product, order..</string>
    <string name="search_by_service">Search by service provider name, product, order..</string>
    <string name="Cart">Cart</string>
    <string name="Size">Size</string>
    <string name="Checkout">Checkout</string>
    <string name="price_effect">Note: the price is affected by the delivery location</string>
    <string name="select_delivery_address">select delivery address</string>
    <string name="select_time_date">select time and delivery date</string>
    <string name="OrderSummary">Order Summary</string>
    <string name="Quantity">Quantity</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="haveCoupon">Do you have a coupon?</string>
    <string name="apply">Apply</string>
    <string name="couponNumber">coupon number</string>
    <string name="FindService">FIND SERVER PROVIDER</string>
    <string name="Now">Now</string>
    <string name="Specify">Specify</string>
    <string name="pending_cash_delivery">Pending cash on delivery</string>
    <string name="SizeCapacity">Size / Capacity</string>
    <string name="Subtotal">Subtotal</string>
    <string name="AdditionalFees">Additional fees due to delivery address</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="KNETPayment">Knet Payment</string>
    <string name="CreditCard">Credit Card</string>
    <string name="CashOnDelivery">Cash on delivery</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="NoServiceProvider">Unfortunately there are no available service providers at the moment. Please try again later</string>
    <string name="GoToSerices">Go to services page</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_sent">Verification code has been sent to your mobile number.</string>
    <string name="Services">Services</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="LocationOnMap">Location On Map</string>
    <string name="SavedLocation">Saved Location</string>
    <string name="NewAddress">New Address</string>
    <string name="continue_">Continue</string>
    <string name="AddNewAddress">ADD NEW ADDRESS</string>
    <string name="AddressName">Address Name</string>
    <string name="Street">Street</string>
    <string name="SaveMyAddress">SAVE TO MY ADDRESS</string>
    <string name="Building">Building</string>
    <string name="Path">Path</string>
    <string name="Floor">Floor</string>
    <string name="MoreDetails">More details about the address</string>
    <string name="UseOnce">USE ONLY THIS TIME</string>
    <string name="search_for_your_location">Search for your location</string>
    <string name="MoveMapAndDrop">Move the map and drop the pin to your address</string>
    <string name="MarkYourAddress">Mark your address on map for faster delivery</string>
    <string name="myAccount">My Account</string>
    <string name="MyServices">My Services</string>
    <string name="Settlements">Settlements</string>
    <string name="ContactAdministrator">Contact Administrator</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="TermsAndConditions">Terms and conditions</string>
    <string name="RateUs">Rate Us</string>
    <string name="MyProfile">My Profile</string>
    <string name="langSetting">Language</string>
    <string name="PushNotifications">Push Notifications</string>
    <string name="ShareApp">Share App</string>
    <string name="logout">Logout</string>
    <string name="Price">Price</string>
    <string name="Earning">Earning</string>
    <string name="ToBeSettled">To Be Settled</string>
    <string name="previews_settlements">Previews Settlements</string>
    <string name="total_order">Total Order</string>
    <string name="count">Count</string>
    <string name="settlement">Settlement</string>
    <string name="amount">Amount</string>
    <string name="MyEarning">My Earning</string>
    <string name="RequestSettlement">Request Settlement</string>
    <string name="please_select_language">Please Select Language</string>
    <string name="service_information">Service Information</string>
    <string name="stock_available">Stock Available</string>
    <string name="for_the_service">(For the service / product / vehicle)</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No file Chosen</string>
    <string name="ownership_proof">Ownership Proof</string>
    <string name="driving_license">Driving License</string>
    <string name="license_number">License Number</string>
    <string name="work_license">Work License</string>
    <string name="vehicle_license">Vehicle License</string>
    <string name="previews">Previews</string>
    <string name="no_data">No Data</string>
    <string name="Clear">Clear</string>
    <string name="next">Next</string>
    <string name="Done">Done</string>
    <string name="price_earning"><![CDATA[Price & Earning]]></string>
    <string name="create_service">Create Service</string>
    <string name="Suggest_Delvr">Suggest new delivery time</string>
    <string name="SendRequest">SEND REQUEST</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="ActiveOrderDetails">Active Order Details</string>
    <string name="Actual_delivery">Actual Delivery</string>
    <string name="CompletedOrderDetails">Completed Order Details</string>
    <string name="order">Order</string>
    <string name="MyDues">My Dues</string>
    <string name="upload_images">Upload Images</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="renew_order">Renew Order</string>
    <string name="order_type">Order Type</string>
    <string name="Register_login">Register or Login</string>
    <string name="share">Share</string>
    <string name="MyAddresses">My Addresses</string>
    <string name="inApp">In App</string>
    <string name="view_related_orders">View Related Orders</string>
    <string name="Related_orders_settlement">Related Orders of settlement </string>
    <string name="not_available">Not Available</string>
    <string name="Registration">Registration</string>
    <string name="unavailable">Unavailable</string>
    <string name="exit">Exit</string>
    <string name="sureExit">Are you sure you want to exit ?</string>
    <string name="sureLogout">Are you sure you want to logout ?</string>
    <string name="contact_us">Contact Us</string>
    <string name="full_name">Full Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="enter_the_4_digit_code_sent_to_you_from_qasemati">Enter the 4 digit code sent to you from Qasemati</string>
</resources>